# safety-video-harness

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  handoff.md  pyproject.toml  scenes.json
.codex-plugin/: plugin.json
agents/: continuity-qa.md  storyteller.md  video-qa.md  visual-continuity-director.md
docs/: agent-skill-reference-onepager.html  evaluation-rubrics.md  few-shot-examples.md  generative-media-reference-index.md  higgsfield-seedance-local-reference.md  imagegen-prompting-references.md  opencv-mcp-local-reference.md  precision-industrial-webtoon-onepager.html  reference-sources.md  repository-folder-structure-onepager.html  safety-video-harness-algorithm-onepager.html  safety-video-harness-onepager.html  safety-video-plugin-overview-onepager.html
evidence/: bundle1-check-tools.txt  bundle1-cleanup.txt  bundle1-final-pytest-after-render-guard.txt  bundle1-manual-qa.txt  bundle1-python-loc.txt  bundle1-remicon-dry-run.txt  bundle2-final-pytest.txt  bundle2-manual-qa.txt  bundle2-remicon-dry-run.txt  claude-code-conversion-2026-06-12.txt  evaluator-arbiter-red.txt  file-list.txt  final-pytest-after-real-pptx-project.txt  final-pytest-video-skill-integration.txt  fix-final-keyframe-sc07-2026-06-11.txt  full-video-stepwise-real-file-test.txt  higgsfield-cli-install.md  local-qa-contract-dryrun-2026-06-12.txt  manual-qa-cleanup.txt  manual-qa-tempdir.txt  omo-image-ralph-orchestrator-verification.txt  prd-comparison-manual-qa.txt  python-loc.txt  qa-criteria-final-pytest.txt  qa-criteria-green-tests.txt  qa-criteria-image-loop-preview.json  (+21 more)
(+576 files in other folders)
